<resources>
    <string name="app_name">LoginPage</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_signin">Email ...</string>
    <string name="password_signin">Password ...</string>
    <string name="email">Email ...</string>
    <string name="set_password">Set Password ...</string>
    <string name="foodie">Foodie</string>
    <string name="delivery_executive">Delivery Executive</string>
    <string name="name">Name ...</string>
    <string name="phone_number">Phone Number ...</string>
    <string name="title_activity_del_prof">Del_prof</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_delivery_panel">DeliveryPanel</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="nav_open">Nav_open</string>
    <string name="nav_close">Nav_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
